generate server (#2) :rainbow:
* [doc] update README :orange_book:

* [doc] append openAPI docs :orange_book:

* [doc] add examples :orange_book:

* [refactor] rename yaml :railway_car:

* [fix] fix scheme :orange_book:

* [feat] generate server codes :sparkles:

* [feat] create base api :+1:

* [fix] fix function name :shirt:

* [fix] rename file :shirt:

* [fix] fix swagger documents :orange_book:

* [feat] add logging middleware :sparkles:

* [feat] add panic recovery middleware :sparkles:

* [feat] add resource quota :sparkles:

* [fix] use library for logger middleware :bug:

* [fix] fix omitempty :+1:

* [fix] fix log settings / configure default error code :+1:

* [feat] set time format :shirt:

* [feat] add sync route / refactor :sparkles:

* [fix] disable stock API :bug:

* [fix] fix per_page parameter :bug:

* [fix] fix request quota :shirt:

* [fix] default port :+1:

* [feat] convert contents (beta) :sparkles:

* [fix] return empty items when search result empty :+1:

* [feat] add Dockerfile :sparkles:

* [fix] fix Makefile :orange_book:
