# gen/models/statistics.go
@@ -1,0 +1,71 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"bytes"
+	"encoding/json"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// Statistics statistics
+//
+// swagger:model Statistics
+type Statistics struct {
+
+	// LGTM数
+	Lgtms int64 `json:"lgtms"`
+
+	// ストック数（ストックしているユーザー数）
+	Stocks int64 `json:"stocks,omitempty"`
+}
+
+// UnmarshalJSON unmarshals this object while disallowing additional properties from JSON
+func (m *Statistics) UnmarshalJSON(data []byte) error {
+	var props struct {
+
+		// LGTM数
+		Lgtms int64 `json:"lgtms"`
+
+		// ストック数（ストックしているユーザー数）
+		Stocks int64 `json:"stocks,omitempty"`
+	}
+
+	dec := json.NewDecoder(bytes.NewReader(data))
+	dec.DisallowUnknownFields()
+	if err := dec.Decode(&props); err != nil {
+		return err
+	}
+
+	m.Lgtms = props.Lgtms
+	m.Stocks = props.Stocks
+	return nil
+}
+
+// Validate validates this statistics
+func (m *Statistics) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Statistics) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Statistics) UnmarshalBinary(b []byte) error {
+	var res Statistics
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
